# Falaise_Modules

./: README.md
FLMANU/: CMakeLists.txt  FLMANU_CD.cc  FLMANU_GENBB.cc  FLMANU_Killer.cc  FLMANU_NeMg.cc  FLMANU_Test.cc
FLMANU/conf/: FLMANU_CD.conf.in  FLMANU_GENBB.conf.in  FLMANU_Killer.conf.in  FLMANU_NeMg.conf.in  FLMANU_Test.conf.in
Tutorial/: CMakeLists.txt  SkeletonModule.cc  SkeletonModule_SD.cc  skeleton_pipeline.conf
ZeroHitCleaner/: CMakeLists.txt  ZeroHitCleaner.cc  ZeroHitCleaner.conf.in
